--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ body {
   font-size: 25px;
 }
 
+.storedNumber {
+  position: absolute;
+  left: 10px;
+}
+
 .numberContainer,
 .operatorContainer {
   /* border: 2px solid green; */
